# DOCS

./: .gitignore  Shell.txt  bashDoc.txt  cmake.txt  gitDoc.txt  shellCommands.txt  symbols.txt  tmux.txt  vim.txt
MyProject/: CMakeLists.txt
MyProject/src/: main.cpp
MyProject/src/mylib/: mylib.cpp  mylib.h
settings/: neofetch_settings.txt  tmux_setting.txt
